lambda/k8s/hdfs/hdfs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hdfs-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: hdfs.f7f408665cdc431daa59.westus2.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: k8s-hdfs-namenode
            port: 
              number: 50070
